fixed font too big to be seen in mobile devices

--- a/src/modules/App.css
+++ b/src/modules/App.css
@@ -60,6 +60,7 @@
 @media (max-width: 320px) 
 {
   .search-bar{
+    width: 65%;
    font-size: 11px;
   }
 }
